// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description="Github Türkiye istatistikleri 2018"
      forks={30}
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <div>
        <Link
          replace={false}
          to="/repo/alpcanaydin/github.ist"
        >
          <a
            href="/repo/alpcanaydin/github.ist"
            onClick={[Function]}
          >
            alpcanaydin/github.ist
          </a>
        </Link>
        <p>
          Github Türkiye istatistikleri 2018
        </p>
        <div>
          <Link
            className=""
            replace={false}
            to="/language/javascript"
          >
            <a
              className=""
              href="/language/javascript"
              onClick={[Function]}
            >
              JavaScript
            </a>
          </Link>
          <span>
            200
             Star
          </span>
          <span>
            30
             Fork
          </span>
        </div>
      </div>
    </RepoCard>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly without description 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RepoCard
      description=""
      forks={30}
      language={
        Object {
          "name": "JavaScript",
          "slug": "javascript",
        }
      }
      slug="alpcanaydin/github.ist"
      stars={200}
    >
      <div>
        <Link
          replace={false}
          to="/repo/alpcanaydin/github.ist"
        >
          <a
            href="/repo/alpcanaydin/github.ist"
            onClick={[Function]}
          >
            alpcanaydin/github.ist
          </a>
        </Link>
        <div>
          <Link
            className=""
            replace={false}
            to="/language/javascript"
          >
            <a
              className=""
              href="/language/javascript"
              onClick={[Function]}
            >
              JavaScript
            </a>
          </Link>
          <span>
            200
             Star
          </span>
          <span>
            30
             Fork
          </span>
        </div>
      </div>
    </RepoCard>
  </Router>
</MemoryRouter>
`;
